# AdvancedPythonHomeworks

hw1/: nl.py  tail.py  wc.py
hw1/artifacts/: nl  tail  wc
hw2/: Dockerfile  docker-compose.yaml  pyproject.toml
hw2/artifacts/: image.tex  pypi_link  table.tex  table_image.tex
hw2/src/latex_doc_generation/: __init__.py  latex.py
hw2/tests/: test_image.py  test_table.py  test_table_image.py
